# joint-defense-modules

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pixi.toml  start_web.bat  stop_web.bat
model/: HANDOFF_FROM_DEMO.md  PACKAGE_FILES.txt  PACKAGE_MANIFEST.json  README.md  _eval_heldout_rebuilt.py  pyproject.toml  pytest.ini  requirements-runtime.txt  start_web.bat  stop_web.bat
model/.playwright-cli/: page-2026-05-26T04-18-42-932Z.yml  page-2026-05-26T04-19-50-639Z.yml  page-2026-05-26T04-20-17-186Z.yml  page-2026-05-26T04-20-39-821Z.yml
model/configs/: module_a_classifier_universal_yolov5_yolov8_v1_core_mlp16.json  module_a_runtime.yaml  module_a_synth_classifier_v1.json  module_a_synth_classifier_v2_lowcost.json
model/configs/acceptance/: module_a_authoritative_manifest_v1.json
model/configs/artifacts/: module_a_auxiliary_manifest_v1.json
model/configs/model_security/: adaptive_purification_registry.json  assets.example.yaml  heldout_sets.yaml  hybrid_purify_detox_gpu_bounded.yaml
model/configs/training/: a4_clean_sources_v1.csv
model/diagnostics/video_diagnostic/: video_diagnostic_frames.csv  video_diagnostic_report.json
model/docs/: architecture.md  deployment.md  final_integration_report.md  model_security_integration.md  testing.md
model/docs/model_security/: ALGORITHM_COVERAGE_AND_ROADMAP.md  B_STRONG_MATRIX_DETOX_2026-05-19.md  PROJECT_PROGRESS_2026-05-16.md  THREAT_MODEL_AND_LIMITATIONS.md
model/docs/技术.算法/: 2026-05-21-d6415677-yolov8-engine检测输出问题记录.md  2026-05-21-engine模型族自动识别算法修复.md  2026-05-21-head主导PPE检测实现记录.md  2026-05-21-head主导PPE算法取舍记录.md  2026-05-21-低置信孤立Head降级与人员显示修复记录.md  2026-05-21-旋转视频方向与横屏检测性能问题记录.md  2026-05-21-检测输出模型族状态修复.md  2026-05-21-模型输出类别与PPE兼容性记录.md  2026-05-22-A模块每帧隔帧与多帧报警逻辑记录.md  2026-05-22-PPE与A模块优化路线记录.md  2026-05-22-PPE方案3弱头部时序升级待做.md  2026-05-22-PPE显示轨迹拖框与计数一致性修复记录.md  2026-05-22-启动卡顿与B模块热路径排查记录.md  (+24 more)
model/tests/: conftest.py  probe_web_start.py  profile_feature_timings.py  run_samples_smoke.py  run_samples_smoke_edge.py  run_samples_smoke_torch.py  test_a1_overexposure.py  test_a3b_display_and_natural_exposure.py  test_a3b_heldout_tool_contract.py  test_a3b_pipeline_suppression_refresh.py  test_a3b_result_contract.py  test_a3b_runtime_policy_hardening.py  test_a3b_soft_bbox_continuity.py  test_a3b_soft_trigger.py  test_a3b_source_time_cadence.py  test_a3b_status_health_and_legacy.py  test_a4_artifact_contract.py  test_a4_dataset.py  test_a4_patch_features.py  test_a4_production_training.py  test_a4_rule_fusion.py  test_adv_patch_coverage.py  test_authoritative_manifest.py  test_authoritative_model_contract.py  test_authoritative_web_report_contract.py  test_backend_pipeline_contract.py  test_derived_video_cache.py  test_detector_backend_candidate_confidence.py  test_detector_gpu_input_parity.py  test_evidence_and_pipeline_cache_hardening.py  test_evidence_async_writer_contract.py  test_evidence_event_contract.py  test_fastapi_control_contract.py  test_final_acceptance_matrix.py  test_final_acceptance_scenes.py  test_frame_processor_public_a3b_observability.py  test_full_flow_stability.py  test_gpu_marker_cpu_fallback.py  test_legacy_ppe_hardening.py  test_model_security_adaptive_delivery.py  (+73 more)
model/tools/: _diag_signals.py  a3b_debug_video.py  a3b_material_audit.py  a3b_quick_diag.py  a3b_scan_video.py  analyze_adv_patch_coverage.py  benchmark_video_decode.py  build_a4_training_dataset.py  build_authoritative_yolo.py  build_nvdec_derived_video.py  build_release_manifest.py  capture_runtime_preview_video.py  cleanup_visual_artifacts.py  export_ppe_overlay_records.py  export_visual_acceptance_frames.py  extract_yolo_fp_frames.py  generate_final_acceptance_scenes.py  generate_run_model_attack_videos.py  make_yolo_fp_review_sheet.py  model_security_scan.py  module_a_monitor_app.py  module_a_tuning_app.py  native_batch_benchmark.py  native_benchmark.py  ppe_overlay_summary.py  rebind_model_security_trust_store.py  render_ppe_debug_video.py  render_ppe_overlay_video.py  run_a3b_heldout.py  run_authoritative_web_acceptance.py  run_final_acceptance_matrix.py  run_yolo_fp_mining.py  train_a4_production.py  validate_authoritative_manifest.py  validate_sync_delay_smoke.py  verify_module_a_auxiliary_artifacts.py  video_diagnostic.py
(+676 files in other folders)
