[package]
name = "module_a_native"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[lib]
name = "module_a_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"
